# derive_try

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml  permissions-advisor.yml
examples/: monadic_try.rs  monadic_try_macro.rs  tagless_final_calculator.rs  tagless_final_calculator_macro.rs
src/: error.rs  helper.rs  lib.rs  try2.rs
tests/: try.rs
